@@ -1,3 +1,8 @@
+2004-02-05  Pierre Chifflier  <pollux@wzdftpd.net>
+
+	* optimization: removed strcasecmp/strncpy in perm_find_create
+	* bugfix: compile error with ipv6 on FreeBSD
+
 2004-02-02  Pierre Chifflier  <pollux@wzdftpd.net>
 
 	* feature: site link create/remove (win32/visual)
